# tts-models-for-vietnamese

./: README.md  pyproject.toml  requirements.txt
tts_models/: main.py  utils.py
tts_models/prompttts2/prompt_generation_pipeline/: fusion.py  main.py
tts_models/prompttts2/prompt_generation_pipeline/prompt_word/: accent_central_vn.txt  accent_northern_vn.txt  accent_southern_vn.txt
