[project]
name = "tts_models"
version = "0.1.0"
description = "A collection of TTS models from published papers."
readme = "README.md"
requires-python = ">=3.6"
authors = [{ name = "quochuy242", email = "truongquochuy.240203@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "build>=0.9.0",
    "loguru>=0.7.3",
    "matplotlib>=3.3.4",
    "nemo-toolkit[tts]>=1.2.0",
    "numpy>=1.19.5",
    "rich>=10.11.0",
    "setuptools>=59.5.0",
    "torch>=1.5.1",
    "torchaudio>=0.10.2",
    "tqdm>=4.64.1",
    "twine>=3.8.0",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150
indent-width = 4
